# Tag

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Constants.h  Cube.cpp  Cube.h  Menu.cpp  Menu.h  Player.cpp  Player.h  TAG.cpp  TAG.sln  TAG.vcxproj  TAG.vcxproj.filters  Tablet.cpp  Tablet.h  Task_file.txt  bot.cpp  bot.h  game_time.cpp  game_time.h
x64/Debug/: TAG.exe.recipe  TAG.ilk  TAG.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/TAG.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TAG.lastbuildstate  TAG.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
